cambions en idioma

--- a/src/app/modules/products/list-product/list-product.component.html
+++ b/src/app/modules/products/list-product/list-product.component.html
@@ -571,8 +571,9 @@
                                                        <thead>
                                                           <tr class="fw-bold text-muted">
                                                              <th class="">Unidad</th>
-                                                             <th class="">Almacen</th>
-                                                             <th class="">Cantidad</th>
+                                                             <th class="">Sucrsal</th>
+                                                             <th class="">Segmento de Cliente</th>
+                                                             <th class="">Precio $</th>
                                                              <th class="">Acciones</th>
                                                           </tr>
                                                        </thead>
@@ -597,9 +598,12 @@
                                                              <td class="text-gray-900 fw-bold text-hover-primary fs-6">
                                                                 Monterrey
                                                              </td>
+                                                             <td class="text-gray-900 fw-bold text-hover-primary fs-6">
+                                                                Cliente Final
+                                                             </td>
                                                              <td>
                                                                 <!-- <span class="badge badge-light-success">Approved</span> -->
-                                                                5
+                                                                520 M.N
                                                              </td>
                                                              <td class="">
 
